# BasedSchizoBOT

./: Dockerfile  README.md  decimdictionary.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run_morpho.py  run_tagger.py  schizodict.py  tagger_dad.py  test_utils.py  utils.py
.github/workflows/: build-image.yml  test.yml
test/: test_utils.py
